<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content">
            <EditText
                android:textAlignment="center"
                android:id="@+id/name"
                android:hint="@string/hint_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:textAlignment="center"
                android:visibility="gone"
                android:id="@+id/room"
                android:hint="@string/hint_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/join"
                android:text="@string/action_join"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="join"/>
            <Button
                android:id="@+id/host"
                android:text="@string/action_host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchLobby"/>
        </LinearLayout>
        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>