<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="brassgames.heist.activities.LobbyActivity">

    <TextView
        android:id="@+id/user_info"
        android:text="@string/user_info"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:textAlignment="center"/>

    <ListView
        android:id="@+id/user_list"
        android:layout_width="match_parent"
        android:layout_height="350dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            android:text="@string/action_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_start"
            android:text="@string/action_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            tools:ignore="buttonStyle"/>
    </LinearLayout>
</LinearLayout>
